# Main_MiSTer

./: .gitignore  CMakeLists.txt  DiskImage.cpp  Makefile  MiSTer.vcxproj  audio.cpp  battery.cpp  bootcore.cpp  bootcore.h  brightness.cpp  cd.h  cfg.cpp  cfg.h  charrom.cpp  cheats.cpp  cheats.h  debug.h  file_io.cpp  file_io.h  fpga_io.cpp  fpga_io.h  fpga_manager.h  fpga_nic301.h  fpga_reset_manager.h  fpga_system_manager.h  gamecontroller_db.cpp  gamecontroller_db.h  hardware.cpp  hardware.h  ide.cpp  ide.h  ide_cdrom.cpp  ide_cdrom.h  input.cpp  input.h  joymapping.cpp  joymapping.h  main.cpp  menu.cpp  menu.h  (+21 more)
lib/flac/src/include/share/: compat.h  windows_unicode_filenames.h
lib/md5/: md5.c  md5.h
lib/miniz/: ChangeLog.md  miniz.c  miniz.h
support/arcade/: buffer.cpp  mra_loader.cpp  mra_loader.h
support/archie/: archie.cpp  archie.h
support/c64/: c64.cpp  c64.h
support/chd/: mister_chd.cpp  mister_chd.h
support/megacd/: megacd.cpp  megacd.h  megacdd.cpp
support/minimig/: miminig_fs_messages.h  minimig_boot.cpp  minimig_boot.h  minimig_config.cpp  minimig_config.h  minimig_fdd.cpp  minimig_hdd.cpp  minimig_hdd.h  minimig_share.cpp  minimig_share.h
support/n64/: n64.cpp
support/neogeo/: neogeo_loader.cpp  neogeo_loader.h  neogeocd.cpp  neogeocd.h
support/pcecd/: pcecd.cpp  pcecd.h
support/psx/: mcdheader.h  psx.cpp  psx.h
support/saturn/: saturn.cpp  saturn.h  saturncdd.cpp
support/sharpmz/: sharpmz.cpp
support/snes/: snes.cpp  snes.h
support/st/: st_tos.cpp  st_tos.h
support/uef/: uef_reader.cpp  uef_reader.h
support/x86/: x86.cpp  x86.h  x86_share.cpp  x86_share.h
